--- a/requirements.txt
+++ b/requirements.txt
@@ -2,24 +2,24 @@ absl-py==1.0.0
 appdirs==1.4.4
 astunparse==1.6.3
 audioread==2.1.9
-cachetools==5.2.0
+cachetools
 certifi==2022.5.18.1
 cffi==1.15.0
 charset-normalizer==2.0.12
-click==8.1.3
+click
 cycler==0.11.0
 decorator==5.1.1
-Flask==2.1.2
+Flask
 flatbuffers==1.12
-fonttools==4.33.3
+fonttools
 gast==0.4.0
 google-api-core==2.8.1
 google-auth==2.6.6
 google-auth-oauthlib==0.4.6
 google-cloud==0.34.0
 google-cloud-core==2.3.0
-google-cloud-storage==2.3.0
-google-cloud-vision==2.7.2
+google-cloud-storage
+google-cloud-vision
 google-crc32c==1.3.0
 google-pasta==0.2.0
 google-resumable-media==2.3.3
@@ -27,10 +27,10 @@ googleapis-common-protos==1.56.2
 grpcio==1.46.3
 grpcio-status==1.46.3
 gunicorn==20.1.0
-h5py==3.7.0
+h5py
 idna==3.3
-importlib-metadata==4.11.4
-itsdangerous==2.1.2
+importlib-metadata
+itsdangerous
 Jinja2==3.1.2
 joblib==1.1.0
 keras==2.9.0
