--- a/requirements.txt
+++ b/requirements.txt
@@ -31,23 +31,23 @@ h5py
 idna==3.3
 importlib-metadata
 itsdangerous
-Jinja2==3.1.2
+Jinja2
 joblib==1.1.0
 keras==2.9.0
 Keras-Preprocessing==1.1.2
-kiwisolver==1.4.2
+kiwisolver
 libclang==14.0.1
 librosa==0.9.1
-llvmlite==0.38.1
+llvmlite
 Markdown==3.3.7
-MarkupSafe==2.1.1
-matplotlib==3.5.2
-numba==0.55.2
-numpy==1.22.4
+MarkupSafe
+matplotlib
+numba
+numpy
 oauthlib==3.2.0
 opt-einsum==3.3.0
 packaging==21.3
-Pillow==9.1.1
+Pillow
 pooch==1.6.0
 proto-plus==1.20.5
 protobuf==3.19.4
@@ -60,20 +60,20 @@ requests==2.27.1
 requests-oauthlib==1.3.1
 resampy==0.2.2
 rsa==4.8
-scikit-learn==1.1.1
-scipy==1.8.1
+scikit-learn
+scipy
 six==1.16.0
 SoundFile==0.10.3.post1
 tensorboard==2.9.0
 tensorboard-data-server==0.6.1
 tensorboard-plugin-wit==1.8.1
-tensorflow==2.9.1
-tensorflow-estimator==2.9.0
-tensorflow-io-gcs-filesystem==0.26.0
+tensorflow
+tensorflow-estimator
+tensorflow-io-gcs-filesystem
 termcolor==1.1.0
 threadpoolctl==3.1.0
-typing_extensions==4.2.0
+typing_extensions
 urllib3==1.26.9
-Werkzeug==2.1.2
-wrapt==1.14.1
-zipp==3.8.0
+Werkzeug
+wrapt
+zipp
